--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,6 @@ Priority: optional
 Architecture: any
 Depends: python3 (>=3.6), python3-pyqt6, pyqt6-dev-tools
 Description: LinuxCNC GUI
- PyQt6 Gui.
- Note the second and additional lines are
- indented with one space.
+ PyQt6 Python3 GUI.
+ Flexible GUI that can be built to suit you.
 
