attempt to add widget to designer but failed
Signed-off-by: John Thornton <dev@gnipsel.com>

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: jet  
-Maintainer: John Thornton <jt@gnipsel.com>
+Maintainer: John Thornton <dev@gnipsel.com>
 Build-Depends: debhelper (>= 11.0.0)
 Standards-Version: 4.5.1
 Section: utils
@@ -8,7 +8,7 @@ Priority: optional
 Package: jet
 Priority: optional
 Architecture: any
-Depends: python3 (>=3.6), python3-pyqt6, pyqt6-dev-tools
+Depends: ${misc:Depends}, python3 (>=3.6), python3-pyqt6, pyqt6-dev-tools
 Description: LinuxCNC GUI
  PyQt6 Python3 GUI.
  Flexible GUI that can be built to suit you.
